[bumpversion]
current_version = 2023.06.03
commit = True
tag = True

[metadata]
author = "Seiso"
description = "A docker container to simplify and secure the use of Infrastructure as Code (IaC)"
description-file = "README.md"
license = "BSD-3-Clause"
license_file = "LICENSE"
name = "easy_infra"
url = "https://github.com/SeisoLLC/easy_infra"

[bumpversion:file:easy_infra/__init__.py]

[bumpversion:file:setup.cfg]

[bumpversion:file:docs/conf.py]
