[bumpversion]
current_version = 2023.11.05
parse = (?P<year>2[0-1]\d{2})\.(?P<month>(0\d|1[0-2]))(.(?P<increment>\d{2}))?
serialize = {year}.{month}.{increment}
commit = True
tag = True

[metadata]
author = "Seiso"
description = "A docker container to simplify and secure the use of Infrastructure as Code (IaC)"
description-file = "README.md"
versioning = "CalVer"
license = "BSD-3-Clause"
license_file = "LICENSE"
name = "easy_infra"
url = "https://github.com/SeisoLLC/easy_infra"

[bumpversion:file:easy_infra/__init__.py]

[bumpversion:file:docs/conf.py]
